--- a/DevExpress.VideoRent.Wpf/CustomerDetail/CustomerAddMemberEditView.xaml
+++ b/DevExpress.VideoRent.Wpf/CustomerDetail/CustomerAddMemberEditView.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl x:Class="DevExpress.VideoRent.Wpf.CustomerAddMemberEditView"
+﻿<mb:CustomShowUserControl x:Class="DevExpress.VideoRent.Wpf.CustomerAddMemberEditView"
+    xmlns:mb="clr-namespace:DevExpress.VideoRent.Wpf.ModulesBase"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -13,9 +14,10 @@
     xmlns:local="clr-namespace:DevExpress.VideoRent.Wpf"
     xmlns:rhelpers="clr-namespace:DevExpress.VideoRent.Resources.Helpers;assembly=DevExpress.VideoRent.Resources"
     xmlns:helpers="clr-namespace:DevExpress.VideoRent.Wpf.Helpers"
-    xmlns:resources="clr-namespace:DevExpress.VideoRent.Resources;assembly=DevExpress.VideoRent.Resources">
-    
-    <UserControl.Resources>
+    xmlns:resources="clr-namespace:DevExpress.VideoRent.Resources;assembly=DevExpress.VideoRent.Resources"
+    ShowMethodType="{DynamicResource ShowType}" MinWidth="400" MinHeight="250">
+
+    <mb:CustomShowUserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/DevExpress.VideoRent.Wpf;component/Themes/EditsStyles.xaml" />
@@ -28,15 +30,20 @@
             <helpers:ImageCollectionImageSource x:Key="AddButtonImageSource" ImageCollection="{Binding Source={StaticResource ImagesHelper}, Path=BarImages}" ImageIndex="0" />
             <helpers:ImageCollectionImageSource x:Key="DeleteButtonImageSource" ImageCollection="{Binding Source={StaticResource ImagesHelper}, Path=BarImages}" ImageIndex="2" />
             <helpers:ImageCollectionImageSource x:Key="AllowEditingButtonImageSource" ImageCollection="{Binding Source={StaticResource ImagesHelper}, Path=BarImages}" ImageIndex="5" />
+            <helpers:DebugDataBindingConverter x:Key="DebugBinding"/>
+            <mb:PopupShowType x:Key="ShowType" />
         </ResourceDictionary>
-    </UserControl.Resources>
-    <helpers:DataBindingsHelper.Bindings>
+      </mb:CustomShowUserControl.Resources>
+      <helpers:DataBindingsHelper.Bindings>
         <helpers:BindingsInfoCollection DataContext="{Binding Source={StaticResource DataSource}, Path=DataObject}" DoValidateSignalSlot="{Binding DoValidateSignal}" IsValid="{Binding IsValid, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <helpers:BindingInfo ElementName="resource:ElementLayoutDataStore" Property="{x:Static local:ElementLayoutDataStore.DisposeSignalSlotProperty}" Value="{Binding DisposeSignal}" />
+            <helpers:BindingInfo ElementName="resource:ShowType" Property="{x:Static mb:ShowType.CloseSignalSlotProperty}" Value="{Binding DisposeSignal}" />
+            <helpers:BindingInfo ElementName="resource:ShowType" Property="{x:Static helpers:CustomEventCommandHelper.ClosingProperty}" Value="{Binding CommandDispose}" />
+            <helpers:BindingInfo ElementName="resource:ShowType" Property="{x:Static mb:PopupShowType.TitleProperty}" Value="{Binding AddVRObjectEditObject.VideoRentObject.Parent.FirstName}" />
             <helpers:BindingInfo ElementName="PhotoEdit" Property="{x:Static dxe:ImageEdit.SourceProperty}" Value="{Binding EditObject.VideoRentObject.Photo, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DrawingImageToImageSourceConverter}}" />
             <helpers:BindingInfo ElementName="FirstNameEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:BindingInfo ElementName="MiddleNameEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.MiddleName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <helpers:BindingInfo ElementName="LastNameEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <helpers:BindingInfo ElementName="LastNameEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding  EditObject.VideoRentObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DebugBinding}}" />
             <helpers:BindingInfo ElementName="GenderEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.Gender, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:BindingInfo ElementName="GenderEdit" Property="{x:Static dxe:LookUpEditBase.ItemsSourceProperty}" Value="{Binding PersonGenderEditData.List}" />
             <helpers:BindingInfo ElementName="GenderColumnEdit" Property="{x:Static dxe:LookUpEditBase.ItemsSourceProperty}" Value="{Binding PersonGenderEditData.List}" />
@@ -54,67 +61,80 @@
             <helpers:BindingInfo ElementName="MembershipStartDateEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.MembershipStartDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:BindingInfo ElementName="CommentsEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.Comments, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:ValidationInfo EditName0="FirstNameEdit" Rule="{StaticResource ValidationRuleIsNotBlank}" />
-            <helpers:ValidationInfo EditName0="LastNameEdit" Rule="{StaticResource ValidationRuleIsNotBlank}" />
-            <helpers:ElementLayoutInfo ElementName="MainLayoutControl" StoreFolder="LayoutControl:CustomerEdit-MainLayoutControl" Store="{StaticResource ElementLayoutDataStore}" />
+            <!--<helpers:ValidationInfo EditName0="LastNameEdit" Rule="{StaticResource ValidationRuleIsNotBlank}" />-->
+            <helpers:BindingInfo ElementName="OKButton" Property="{x:Static helpers:CustomEventCommandHelper.ClickProperty}" Value="{Binding CommandSaveAndDispose}" />
+            <!--<helpers:BindingInfo ElementName="OKButton" Property="{x:Static ContentElement.IsEnabledProperty}" Value="{Binding ListEdit.CurrentRecord, Converter={StaticResource NullContentToBoolConverter}}" />-->
+            <helpers:BindingInfo ElementName="CancelButton" Property="{x:Static helpers:CustomEventCommandHelper.ClickProperty}" Value="{Binding CommandDispose}" />
+            <helpers:ElementLayoutInfo ElementName="MainLayoutControl" StoreFolder="LayoutControl:CustomerAddMemberEdit-MainLayoutControl" Store="{StaticResource ElementLayoutDataStore}" />
         </helpers:BindingsInfoCollection>
     </helpers:DataBindingsHelper.Bindings>
-    <dxlc:LayoutControl x:Name="MainLayoutControl" Orientation="Vertical" helpers:ImageEditHelper.ImageEdit="{Binding ElementName=PhotoEdit}" Padding="0">
-        <dxlc:LayoutGroup Orientation="Horizontal">
-            <dxlc:LayoutItem dxlc:LayoutControl.AllowHorizontalSizing="True" Width="370" HorizontalAlignment="Left" VerticalAlignment="Stretch">
-                <helpers:CustomImageEdit x:Name="PhotoEdit" Style="{StaticResource CustomerPhotoImageEdit}" />
-            </dxlc:LayoutItem>
-            <dxlc:LayoutGroup Orientation="Vertical" dxlc:LayoutControl.AllowHorizontalSizing="True">
-                <dxlc:LayoutItem Label="{helpers:ConstString ID=FirstNameLabel}">
-                    <dxe:TextEdit x:Name="FirstNameEdit" />
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <dxlc:LayoutControl x:Name="MainLayoutControl" Orientation="Vertical" helpers:ImageEditHelper.ImageEdit="{Binding ElementName=PhotoEdit}" Padding="0">
+            <dxlc:LayoutGroup Orientation="Horizontal">
+                <dxlc:LayoutItem dxlc:LayoutControl.AllowHorizontalSizing="True" Width="370" HorizontalAlignment="Left" VerticalAlignment="Stretch">
+                    <helpers:CustomImageEdit x:Name="PhotoEdit" Style="{StaticResource CustomerPhotoImageEdit}" />
                 </dxlc:LayoutItem>
-                <dxlc:LayoutItem Label="{helpers:ConstString ID=MiddleNameLabel}">
-                    <dxe:TextEdit x:Name="MiddleNameEdit" />
-                </dxlc:LayoutItem>
-                <dxlc:LayoutItem Label="{helpers:ConstString ID=LastNameLabel}">
-                    <dxe:TextEdit x:Name="LastNameEdit" />
-                </dxlc:LayoutItem>
-                <dxlc:LayoutGroup Orientation="Horizontal">
-                    <dxlc:LayoutItem Label="{helpers:ConstString ID=GenderLabel}">
-                        <dxe:ComboBoxEdit x:Name="GenderEdit" Style="{StaticResource IconAndValueComboBoxEdit}" />
+                <dxlc:LayoutGroup Orientation="Vertical" dxlc:LayoutControl.AllowHorizontalSizing="True">
+                    <dxlc:LayoutItem Label="{helpers:ConstString ID=FirstNameLabel}">
+                        <dxe:TextEdit x:Name="FirstNameEdit" />
                     </dxlc:LayoutItem>
-                    <dxlc:LayoutItem Label="{helpers:ConstString ID=BirthDateLabel}">
-                        <dxe:DateEdit x:Name="BirthDateEdit" />
+                    <dxlc:LayoutItem Label="{helpers:ConstString ID=MiddleNameLabel}">
+                        <dxe:TextEdit x:Name="MiddleNameEdit" />
                     </dxlc:LayoutItem>
-                </dxlc:LayoutGroup>
-                <dxlc:LayoutGroup View="Tabs">           
+                    <dxlc:LayoutItem Label="{helpers:ConstString ID=LastNameLabel}">
+                        <dxe:TextEdit x:Name="LastNameEdit" />
+                    </dxlc:LayoutItem>
+                    <dxlc:LayoutGroup Orientation="Horizontal">
+                        <dxlc:LayoutItem Label="{helpers:ConstString ID=GenderLabel}">
+                            <dxe:ComboBoxEdit x:Name="GenderEdit" Style="{StaticResource IconAndValueComboBoxEdit}" />
+                        </dxlc:LayoutItem>
+                        <dxlc:LayoutItem Label="{helpers:ConstString ID=BirthDateLabel}">
+                            <dxe:DateEdit x:Name="BirthDateEdit" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
+                    <dxlc:LayoutGroup View="Tabs">
                         <dxlc:LayoutGroup Header="{helpers:ConstString ID=Address}" Orientation="Vertical">
-                        <dxlc:LayoutItem VerticalAlignment="Top" Label="{helpers:ConstString ID=PhoneLabel}" LabelHorizontalAlignment="Right">
-                            <dxe:TextEdit x:Name="PhoneEdit" Style="{StaticResource PhoneTextEdit}" />
-                        </dxlc:LayoutItem>
-                        <dxlc:LayoutItem Label="{helpers:ConstString ID=AddressLabel}" VerticalAlignment="Stretch" LabelHorizontalAlignment="Right">
-                            <dxe:TextEdit x:Name="AddressEdit" Style="{StaticResource MultilineShortTextEdit}" />
-                        </dxlc:LayoutItem>
-                        <dxlc:LayoutItem VerticalAlignment="Bottom" Label="{helpers:ConstString ID=EmailLabel}" LabelHorizontalAlignment="Right"/>
-                    </dxlc:LayoutGroup>
-                    <dxlc:LayoutGroup Header="{helpers:ConstString ID=Discount}" Orientation="Vertical">
-                        <dxlc:LayoutItem Label="{helpers:ConstString ID=DiscountLevelLabel}" VerticalAlignment="Top">
-                            <dxe:ComboBoxEdit x:Name="DiscountLevelEdit" Style="{StaticResource CustomerDiscountLevelComboBoxEdit}" IsReadOnly="True" IsEnabled="False" />
-                        </dxlc:LayoutItem>
-                        <dxlc:LayoutItem Label="{helpers:ConstString ID=DiscountLabel}" VerticalAlignment="Top">
-                            <dxe:TextEdit x:Name="DiscountEdit" Style="{StaticResource PercentTextEdit}" IsReadOnly="True" />
-                        </dxlc:LayoutItem>
-                        <dxlc:LayoutItem VerticalAlignment="Bottom">
-                            <helpers:NoteControl Text="{helpers:ConstString ID=DiscountNote}" />
-                        </dxlc:LayoutItem>
-                    </dxlc:LayoutGroup>
-                    <dxlc:LayoutGroup Header="{helpers:ConstString ID=Membership}" Orientation="Vertical">
-                    <dxlc:LayoutItem Label="{helpers:ConstString ID=MembershipTypeLabel}" VerticalAlignment="Top">
-                        <dxe:ComboBoxEdit x:Name="MembershipTypeEdit" Style="{StaticResource CustomerMembershipTypeComboBoxEdit}" IsReadOnly="False" IsEnabled="True" />
-                    </dxlc:LayoutItem>
-                    <dxlc:LayoutItem Label="{helpers:ConstString ID=StartDateLabel}">
-                            <dxe:DateEdit x:Name="MembershipStartDateEdit" />
-                    </dxlc:LayoutItem>
+                            <dxlc:LayoutItem VerticalAlignment="Top" Label="{helpers:ConstString ID=PhoneLabel}" LabelHorizontalAlignment="Right">
+                                <dxe:TextEdit x:Name="PhoneEdit" Style="{StaticResource PhoneTextEdit}" />
+                            </dxlc:LayoutItem>
+                            <dxlc:LayoutItem Label="{helpers:ConstString ID=AddressLabel}" VerticalAlignment="Stretch" LabelHorizontalAlignment="Right">
+                                <dxe:TextEdit x:Name="AddressEdit" Style="{StaticResource MultilineShortTextEdit}" />
+                            </dxlc:LayoutItem>
+                            <dxlc:LayoutItem VerticalAlignment="Bottom" Label="{helpers:ConstString ID=EmailLabel}" LabelHorizontalAlignment="Right"/>
+                        </dxlc:LayoutGroup>
+                        <dxlc:LayoutGroup Header="{helpers:ConstString ID=Discount}" Orientation="Vertical">
+                            <dxlc:LayoutItem Label="{helpers:ConstString ID=DiscountLevelLabel}" VerticalAlignment="Top">
+                                <dxe:ComboBoxEdit x:Name="DiscountLevelEdit" Style="{StaticResource CustomerDiscountLevelComboBoxEdit}" IsReadOnly="True" IsEnabled="False" />
+                            </dxlc:LayoutItem>
+                            <dxlc:LayoutItem Label="{helpers:ConstString ID=DiscountLabel}" VerticalAlignment="Top">
+                                <dxe:TextEdit x:Name="DiscountEdit" Style="{StaticResource PercentTextEdit}" IsReadOnly="True" />
+                            </dxlc:LayoutItem>
+                            <dxlc:LayoutItem VerticalAlignment="Bottom">
+                                <helpers:NoteControl Text="{helpers:ConstString ID=DiscountNote}" />
+                            </dxlc:LayoutItem>
+                        </dxlc:LayoutGroup>
+                        <dxlc:LayoutGroup Header="{helpers:ConstString ID=Membership}" Orientation="Vertical">
+                            <dxlc:LayoutItem Label="{helpers:ConstString ID=MembershipTypeLabel}" VerticalAlignment="Top">
+                                <dxe:ComboBoxEdit x:Name="MembershipTypeEdit" Style="{StaticResource CustomerMembershipTypeComboBoxEdit}" IsReadOnly="False" IsEnabled="True" />
+                            </dxlc:LayoutItem>
+                            <dxlc:LayoutItem Label="{helpers:ConstString ID=StartDateLabel}">
+                                <dxe:DateEdit x:Name="MembershipStartDateEdit" />
+                            </dxlc:LayoutItem>
+                        </dxlc:LayoutGroup>
                     </dxlc:LayoutGroup>
                 </dxlc:LayoutGroup>
             </dxlc:LayoutGroup>
-        </dxlc:LayoutGroup>
-        <dxlc:LayoutItem Label="{helpers:ConstString ID=Comments}" LabelPosition="Top" Height="150">
-            <dxe:TextEdit x:Name="CommentsEdit" Style="{StaticResource MultilineShortTextEdit}" />
-        </dxlc:LayoutItem>
-    </dxlc:LayoutControl>
-</UserControl>
+            <dxlc:LayoutItem Label="{helpers:ConstString ID=Comments}" LabelPosition="Top" Height="150">
+                <dxe:TextEdit x:Name="CommentsEdit" Style="{StaticResource MultilineShortTextEdit}" />
+            </dxlc:LayoutItem>
+        </dxlc:LayoutControl>
+        <dx:UniformStackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="12,0,12,12">
+            <Button x:Name="AddButton" Content="{helpers:ConstString ID=Add}" MinWidth="120" />
+            <Button x:Name="CancelButton" Content="{helpers:ConstString ID=Cancel}" MinWidth="120" />
+        </dx:UniformStackPanel>
+    </Grid>
+</mb:CustomShowUserControl>
