--- a/DevExpress.VideoRent.Wpf/CustomerDetail/CustomerEditView.xaml
+++ b/DevExpress.VideoRent.Wpf/CustomerDetail/CustomerEditView.xaml
@@ -20,6 +20,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/DevExpress.VideoRent.Wpf;component/Themes/EditsStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <rhelpers:DrawingImageToImageConverter x:Key="CustomerPhotoTooltipConverter" Height="250" Stretch="Uniform" />
             <rhelpers:DrawingImageToImageSourceConverter x:Key="DrawingImageToImageSourceConverter" />
             <helpers:DataSource x:Key="DataSource" />
             <local:ElementLayoutDataStore x:Key="ElementLayoutDataStore"/>
@@ -51,6 +52,7 @@
             <helpers:BindingInfo ElementName="MembersAssociationsGrid" Property="{x:Static helpers:AddDeleteBar.AllowDeleteProperty}" Value="{Binding CurrentMember.AllowDeleteMember}" />
             <helpers:BindingInfo ElementName="MembersGrid" Property="{x:Static dxg:GridControl.ItemsSourceProperty}" Value="{Binding EditObject.VideoRentObject.Children}" />
             <helpers:BindingInfo ElementName="MembersGridView" Property="{x:Static dxg:GridViewBase.FocusedRowProperty}" Value="{Binding CurrentMember, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <helpers:BindingInfo ElementName="MembersGridView" Property="{x:Static helpers:CustomEventCommandHelper.MouseDoubleClickProperty}" Value="{Binding Detail.CommandEditMember}" />
             <helpers:BindingInfo ElementName="DiscountLevelEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.DiscountLevel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <helpers:BindingInfo ElementName="DiscountLevelEdit" Property="{x:Static dxe:LookUpEditBase.ItemsSourceProperty}" Value="{Binding DiscountLevelEditData.List}" />
             <helpers:BindingInfo ElementName="DiscountEdit" Property="{x:Static dxe:BaseEdit.EditValueProperty}" Value="{Binding EditObject.VideoRentObject.Discount, Mode=OneWay}" />
@@ -113,6 +115,23 @@
                                             </dxg:GridColumn.EditSettings>
                                         </dxg:GridColumn>
                                         <dxg:GridColumn x:Name="BirthDateColumn" FieldName="BirthDate" Header="{helpers:ConstString ID=BirthDate}">
+                                        </dxg:GridColumn>
+                                        <dxg:GridColumn x:Name="PhotoColumn" FieldName="Photo" Header="{helpers:ConstString ID=Photo}" Width="50">
+                                            <dxg:GridColumn.CellStyle>
+                                                <Style TargetType="dxg:CellContentPresenter">
+                                                    <Setter Property="ToolTip" Value="{Binding RowData.Row.Photo, Converter={StaticResource CustomerPhotoTooltipConverter}}" />
+                                                </Style>
+                                            </dxg:GridColumn.CellStyle>
+                                            <dxg:GridColumn.EditTemplate>
+                                                <ControlTemplate>
+                                                    <dxe:PopupImageEdit x:Name="PART_Editor" Style="{StaticResource CustomerPhotoPopupImageEdit}" EditValue="{Binding Path=EditValue, RelativeSource={RelativeSource TemplatedParent},Converter={StaticResource DrawingImageToImageSourceConverter}, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ShowBorder="False" />
+                                                </ControlTemplate>
+                                            </dxg:GridColumn.EditTemplate>
+                                            <dxg:GridColumn.DisplayTemplate>
+                                                <ControlTemplate>
+                                                    <dxe:PopupImageEdit EditValue="{Binding Path=DisplayText, RelativeSource={RelativeSource TemplatedParent},Converter={StaticResource DisplayTextToImageSourceConverter},Mode=OneWay}" AllowDefaultButton="False" IsHitTestVisible="False" ShowBorder="False" />
+                                                </ControlTemplate>
+                                            </dxg:GridColumn.DisplayTemplate>
                                         </dxg:GridColumn>
                                     </dxg:GridControl.Columns>
                                 </dxg:GridControl>
