--- a/DevExpress.VideoRent.Wpf/AthletsList/AthletsListView.xaml
+++ b/DevExpress.VideoRent.Wpf/AthletsList/AthletsListView.xaml
@@ -1,4 +1,4 @@
-﻿<mb:DemoModule xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"  x:Class="DevExpress.VideoRent.Wpf.CustomersListView"
+﻿<mb:DemoModule xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"  x:Class="DevExpress.VideoRent.Wpf.AthletsListView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
@@ -25,7 +25,7 @@
             <helpers:DataSource x:Key="DataSource" />
             <helpers:DataSource x:Key="GridSource" DataObject="{Binding Source={StaticResource DataSource}, Path=DataObject.ListEdit.View.Content.(helpers:GridControlHelper.Grid)}" />
             <helpers:DataSource x:Key="GridCommandsSource" DataObject="{Binding Source={StaticResource GridSource}, Path=DataObject.View.Commands}" />
-            <mb:ClassicShowType x:Key="ShowType" Category="{x:Static local:WpfViewsManager.CategoryCustomers}" />
+            <mb:ClassicShowType x:Key="ShowType" Category="{x:Static local:WpfViewsManager.CategoryAthlets}" />
         </ResourceDictionary>
     </mb:DemoModule.Resources>
     <helpers:DataBindingsHelper.Bindings>
@@ -61,7 +61,6 @@
                 <dxb:BarButtonItem x:Name="BbiEdit" local:ImagesHelper.VideoRentImage="Edit" Content="{helpers:ConstString ID=Edit}" />
                 <dxb:BarButtonItem x:Name="BbiDelete" local:ImagesHelper.VideoRentImage="Delete" Content="{helpers:ConstString ID=Delete}" />
                 <dxb:BarButtonItem x:Name="BbiRefresh" local:ImagesHelper.VideoRentImage="Refresh" Content="{helpers:ConstString ID=Refresh}" />
-                <dxb:BarButtonItem x:Name="BbiSetAsCurrentCustomer" local:ImagesHelper.VideoRentImage="Person" Content="{helpers:ConstString ID=SetAsCurrentCustomer}" />
                 <dxb:BarButtonItem x:Name="BbiCloseDetails" local:ImagesHelper.VideoRentImage="CloseDetails" Content="{helpers:ConstString ID=CloseDetailViews}" />
                 <dxb:BarButtonItem x:Name="BbiView" local:ImagesHelper.VideoRentImage="View" Content="{helpers:ConstString ID=ViewOptions}" />
                 <dxb:BarButtonItem x:Name="BbiUp" local:ImagesHelper.VideoRentImage="Previous" Content="{helpers:ConstString ID=Up}" />
@@ -78,7 +77,6 @@
                             <dxb:BarButtonItemLink BarItemName="BbiRefresh" RibbonStyle="Large" />
                             <dxb:BarButtonItemLink BarItemName="BbiCloseDetails" RibbonStyle="Large" />
                             <dxb:BarItemLinkSeparator />
-                            <dxb:BarButtonItemLink BarItemName="BbiSetAsCurrentCustomer" RibbonStyle="Large" />
                             <dxb:BarItemLinkSeparator />
                             <dxb:BarButtonItemLink BarItemName="BbiView" RibbonStyle="Large" />
                         </dxr:RibbonPageGroup>
@@ -96,11 +94,8 @@
                 <dxdo:LayoutPanel ShowCaption="False" ShowBorder="False" Caption="{helpers:ConstString ID=Companies}" Background="Transparent">
                     <ContentControl x:Name="CustomersEditViewPresenter" Style="{StaticResource ModulePresenter}" />
                 </dxdo:LayoutPanel>
-                <!--<dxdo:LayoutPanel x:Name="CustomerStatsPanel" ItemHeight="*" AllowClose="False" ShowCloseButton="False" Background="Transparent">
-                  <local:CustomerStatsView x:Name="CustomerStatsViewPresenter"/>
-                </dxdo:LayoutPanel>-->
             </dxdo:LayoutGroup>
-        </dxdo:DockLayoutManager> 
-        
+        </dxdo:DockLayoutManager>
+
     </Grid>
 </mb:DemoModule>
